--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Sai Kiran Kurva </title>
+<title> Sai Kiran  </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
